<?xml version="1.0"?>
<package>
  <name>rhoban_viewer</name>
  <version>0.0.0</version>
  <description>A package containing a viewer based on SFML, it requires sfml, GL and GLU</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>
  <author email="medrimonia@gmail.com">medrimonia</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend> <!-- rhobandeps/eigen -->

  <run_depend>eigen</run_depend>

  <export>
  </export>
</package>
